
WARNING 
 if MAXNODELDM > MAXNODEDM
   then switch the size of ..._sc .._pc and pare_tr

Library note:
 SVRGP on IMSL

term
 proc ... to indicate each process

### update log ###

25/05/2016
delete setslgtr.F95 which was not used and from Makefile 

forcont.F95, cont.F95
 save OF_time,OF_nof,OF_iof

output.F95
 set OF_todt from OF_time and update OF_iof

set_ini.F95
if cosm
 read ini/output_asc.dat
else
 read ini/output_time.dat
endif
 if COSM, list of read scale factor, if not cosm, read time (in GCD+ unit).

common.F95
 add OF_nof, OF_iof, OF_time()

specify output time. 
### OFTIMESPEC 21/08/2014

31/07/2014
mesh_setfp: bug fix
            pnitp(i)=pn
->
            pnitp(i+nag)=pn


### ISOPM

main.F95
 call mesh_isogpot.F95 only once. 

mesh_setfp.F95
 set back fy=fz, -fz=fy

new mesh_isogpot.F95
 set ksdgpot_fftw

ksdgpot_fftw ... green function for 1/r (eq. 6-113) of Hockney & Eastwood
initialise in fftw3_init.F95
assign with poidgpot_fftw share the memory with rsdgpot_fftw

mesh_setrho.F95
#ifdef ISOPM
 swap ytp and ztp  ytp=zp, ztp=-yp
  
mesh_gen.F95
#ifdef ISOPM
x0 set to be -SI_lbox/4+0.5dx

gcdp.def
add
#define ISOPM
This is only for non-cosmological simualtion 
31/07/2014
### ISOPM: isolated boundary for PM force calculation

13/08/2013
### TreePM branch

22/04/2013
MHD stub1D test requires comment out vyij=vzij=0 and dvy=dvz=0

matching with pv34.6.10
- use NSTHLIM and p<peffp for star formation criteria

matching with pv34.6.7

- Hopkins et al. SF criteria + NSTHLIM
- stime.F, ltime.F no check for dtmin in stime.F (in case of -10<SI_flagrad<-1
- calc_dv_du.F  /GAM for peff
- output.F output arot_v_p
- set_value.F and set_valuedm.F update

*** difference from pv34.6.2

18/03/2012
treef.F95 and dmtreef.F95  -> pv34.6.7
 set flago=3 if the impoted node np_tr=1
 adding .and.proc_dmtr(nd).eq.myrank) then and etc.

dmtree.F95 ldmtree.F95
 - no pn_nfp, but set pn_dmtr 0 or SI_ndm1
forcont.F95
  - in pdval*.dat not output nagravg