@@ -9,7 +9,7 @@ OBJS = gcdp_const.o common.o main.o set_value.o calc_dv_du.o\
        set_valuedm.o set_chi.o\
        setsldmtr.o kernel.o setmext.o allocate.o\
        mesh_gen.o mesh_setrho.o fftw3_init.o mesh_fftf.o mesh_setfp.o erfcc.o\
-       phcurve.o phcurven.o mesh_isogpot.o del_dmpart.o
+       phcurve.o phcurven.o mesh_isogpot.o del_dmpart.o set_testpdm.o
 INIOBJ = set_ini.o
 CONTOBJ = cont.o
 DEFFILE = gcdp.def gcdp_const.F95 common.F95
